[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsetwacom"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Peter Hutterer", email = "peter.hutterer@who-t.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "dbus-fast",
  "pygobject",
  "pyudev",
  "rich",
]

[project.scripts]
gsetwacom = "gsetwacom:main"

[project.urls]
Documentation = "https://github.com/unknown/gsetwacom#readme"
Issues = "https://github.com/unknown/gsetwacom/issues"
Source = "https://github.com/unknown/gsetwacom"

[tool.ruff]
# Match the hatch default so we can run ruff *or* hatch fmt
# and get the same result
line-length = 120

[tool.ruff.lint]
ignore = [
  "FBT001",  # FBT001 Boolean-typed positional argument in function definition
  "S320",    # S320 Using `lxml` to parse untrusted data is known to be vulnerable to XML attacks
]

[tool.hatch.version]
path = "src/gsetwacom/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gsetwacom tests}"

[tool.coverage.run]
source_pkgs = ["gsetwacom", "tests"]
branch = true
parallel = true
omit = [
  "src/gsetwacom/__about__.py",
]

[tool.coverage.paths]
gsetwacom = ["src/gsetwacom", "*/gsetwacom/src/gsetwacom"]
tests = ["tests", "*/gsetwacom/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
